# sdks/sdkwork-memory-sdk/openapi/memory-open-api.openapi.json
@@ -5227,6 +5227,16 @@
               }
             ]
           },
+          "observationDate": {
+            "anyOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ]
+          },
           "reviewRequired": {
             "type": "boolean"
           },
